Yay- api doc is working
